--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,9 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+ion-menu{
+  width:300px;
+}
+ion-avatar{
+  margin-left:20px;
+}
