Added search bar and completed biometrics

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,16 @@
 
         <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
-
+          <ion-item>
+            <ion-searchbar 
+            showCancelButton="focus" 
+            cancelButtonText="Custom Cancel"
+            debounce="500"
+            animated
+            placeholder="Search Anything"
+            
+            ></ion-searchbar>
+          </ion-item>
           <ion-item *ngFor="let label of labels" lines="none">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
             <ion-label>{{ label }}</ion-label>
