--- a/src/app/biometrics/biometrics.component.html
+++ b/src/app/biometrics/biometrics.component.html
@@ -7,14 +7,132 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Biometrics</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">Boom Boom</strong>
-  </div>
+<ion-content>
+  <h1>All Biometrics</h1>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card class="uk-padding">
+          <ion-card-subtitle>
+            <ion-label class="txt3">
+              Total Attendance by department
+            </ion-label>
+          </ion-card-subtitle>
+          <div style="display: block; margin-top:40px;">
+            <canvas baseChart id="timingChart" width="400" height="265" [legend]="true"
+              [datasets]="pieChartData" [labels]="pieChartLabels" [colors]="pieChartColors"
+              [chartType]="'polarArea'" [options]="pieChartOptions">
+            </canvas>
+          </div>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-icon slot="end" name="help-circle-outline"></ion-icon><strong>Attendance Details</strong>
+        </ion-item>
+        <ion-card class="attendance">
+          <ion-list>
+            <ion-item *ngFor="let item of daysInletters">
+              <ion-avatar>
+                <img src="https://picsum.photos/100" />
+              </ion-avatar>
+              <ion-label class="uk-margin-left">Arnubh Kumar</ion-label>
+              <ion-badge color="primary">On Time</ion-badge>
+              <ion-note slot="end"><ion-chip color="danger miniFont">5:00 Hours (Avg Hrs/Day)</ion-chip></ion-note>
+              <ion-note slot="end"><ion-chip color="success miniFont">9:00 AM (Arrival for Today)</ion-chip></ion-note>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-card class="uk-width-1-1">
+        <ion-row class="uk-flex-between">
+          <ion-col class="uk-width-expand">
+            <ion-label class="txt2">
+              Attendance on biometric system
+            </ion-label>
+          </ion-col>
+          <ion-buttons style="width:min-content;">
+            <ion-button (click)="toggleInterviewData('failed')" id="failedBiometric">
+              <ion-label>
+                Failed
+              </ion-label>
+            </ion-button>
+            <ion-button (click)="toggleInterviewData('passed')" id="passedBiometric">
+              <ion-label>
+                Passed
+              </ion-label>
+            </ion-button>
+            <ion-button (click)="toggleInterviewData('all')" id="allBiometric">
+              <ion-label>
+                All
+              </ion-label>
+            </ion-button>
+          </ion-buttons>
+        </ion-row>
+        <table class="uk-table" *ngIf="interviews.length>0">
+          <thead>
+            <tr>
+              <th>Employee</th>
+              <th>Biometric Status</th>
+              <th>Team</th>
+              <th>Leaves (Taken / Left)</th>
+              <th>Time / Day</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let interviewData of interviews">
+              <td><ion-label>{{interviewData.candidate}}</ion-label></td>
+              <td>
+                <ion-label>
+                  <ion-badge *ngIf="interviewData.status=='Passed'" color="success">
+                    {{interviewData.status}}
+                  </ion-badge>
+                  <ion-badge *ngIf="interviewData.status=='Failed'" color="danger">
+                    {{interviewData.status}}
+                  </ion-badge>
+                </ion-label>
+              </td>
+              <td>
+                <ion-chip color="{{interviewData.team.color}}">
+                  <ion-icon name="at-circle-outline"></ion-icon>
+                  <ion-label>{{interviewData.team.text.split('@').pop()}}</ion-label>
+                </ion-chip>
+              </td>
+              <td>
+                <ion-label class="txt3"><strong class="success">{{interviewData.totalLeave}}</strong>/ <strong class="danger">{{interviewData.leaveTaken}}</strong> </ion-label>
+              </td>
+              <td>
+                <ion-label>{{interviewData.dateTime}}</ion-label>
+              </td>
+              <td>
+                <ion-button color="tertiary" *ngIf="interviewData.status=='Passed'">
+                  <ion-icon name="accessibility"></ion-icon>
+                  <ion-label>&nbsp;See report </ion-label>
+                </ion-button>
+                <ion-button *ngIf="interviewData.status=='Failed'" color="danger">
+                  <ion-icon name="warning"></ion-icon>
+                  <ion-label>&nbsp;See Problem</ion-label>
+                </ion-button>
+              </td>
+              <td>
+                <canvas baseChart #miniCanvas class="miniProgressChart" [legend]="false"
+                  [datasets]="miniChartData" [labels]="miniChartLabels" [colors]="miniChartColors"
+                  [chartType]="'line'" [options]="miniChartOptions">
+                </canvas>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div *ngIf="interviews.length<=0">
+          <div class="uk-align-center">
+            <img src="/assets/broke.png" alt="Nothing Found" class="nothingFound uk-align-center">
+            <p *ngIf="!interviewFilter" class="txt3 uk-text-center">Nothing found please create a <a href="#interview"> new interview</a></p>
+            <p *ngIf="interviewFilter" class="txt3 uk-text-center">Nothing found in this filter please <a (click)="toggleInterviewData('all')"> clear filter </a> to see all.</p>
+          </div>
+        </div>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
