--- a/src/app/holiday-calendar/holiday-calendar.component.html
+++ b/src/app/holiday-calendar/holiday-calendar.component.html
@@ -8,13 +8,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Holiday Calendar</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">Holiday Calendar</strong>
+  <div id="color-calendar">
   </div>
 </ion-content>
