--- a/src/app/holiday-calendar/holiday-calendar.component.scss
+++ b/src/app/holiday-calendar/holiday-calendar.component.scss
@@ -1,1 +1,70 @@
+* {
+    margin: 0;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
+}
 
+#wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+#month-year {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 200px;
+}
+
+#days ion-col {
+    font-weight: 700;
+}
+
+ion-col {
+    min-width: 70px;
+    height: 70px;
+    padding: 1em;
+    text-align: center;
+    font-size: 1rem;
+}
+
+#prev, #next {
+    cursor: pointer;
+    color: #000;
+}
+
+#prev:hover, #next:hover, #prev:focus, #next:focus {
+    color: #555;
+}
+
+.day {
+    transition: box-shadow .5s ease-in-out;
+    cursor: pointer;
+}
+
+.day:hover {
+    box-shadow: 0px 0px 3px 2px #777;
+}
+
+// #overlay {
+//     height: 100vh;
+//     width: 100%;
+//     background-color: rgba(0,0,0,0.5);
+//     z-index: 1;
+//     position: absolute;
+//     top: 0;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+// #reminder-box {
+//     background-color: #fff;
+//     border-radius: 50px;
+//     padding: 2em;
+// }
