--- a/src/app/modals/add-reminder-or-event/add-reminder-or-event.page.html
+++ b/src/app/modals/add-reminder-or-event/add-reminder-or-event.page.html
@@ -1,26 +1,28 @@
 <div id="wrapper">
   <h3>Add a reminder/event for {{ month }} {{ date }}, {{ year }}</h3>
-  <form>
-    <div class="form-subitem">
+  <form (ngSubmit)="add()">
+    <div class="form-item">
       <label for="title">Title</label>
-      <input type="text" name="title" id="title">
+      <input type="text" name="title" id="title" required [(ngModel)]="title" (blur)="isTitleValid()" (input)="isTitleValid()">
     </div>
-    <div class="form-subitem">
+    <div class="form-item">
       <label for="description">Description</label>
-      <textarea name="description" id="description"></textarea>
+      <textarea name="description" id="description" [(ngModel)]="description"></textarea>
     </div>
-    <div class="form-subitem">
-      <input type="checkbox" name="whole-day" id="whole-day">
+    <div class="checkbox">
+      <ion-checkbox name="whole-day" id="whole-day" [(ngModel)]="wholeDay"></ion-checkbox>
       <label for="whole-day">Whole Day</label>
     </div>
-    <div class="form-subitem">
-      <label for="from">From</label>
-      <input type="time" name="from" id="from">
-      <div class="form-subitem">
+    <div id="times" class="{{ wholeDay ? 'hidden' : ''}}">
+      <div class="form-item">
+        <label for="from">From</label>
+        <input type="time" name="from" id="from" [(ngModel)]="from">
+      </div>
+      <div class="form-item">
         <label for="to">To</label>
-        <input type="time" name="to" id="from">
+        <input type="time" name="to" id="to" [(ngModel)]="to">
       </div>
     </div>
-    <ion-button type="submit" (click)="add()">Add!</ion-button>
+    <ion-button type="submit">Add!</ion-button>
   </form>
 </div>
