Some small tweak to UI and completed the draft section and notification section.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-app [ngStyle]="{'filter': (dataProvider.showOverlay) ? 'blur(10px)' : 'blur(0px)' }">
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay" class="ionMenu">
       <ion-content>
@@ -6,35 +6,38 @@
           <ion-avatar>
             <img [src]="authService.getUserPhoto()" alt="User">
           </ion-avatar>
-          <ion-list-header>{{authService.getUserName()}}</ion-list-header>
+          <ion-list-header>{{authService.getUserName()}}&nbsp;&nbsp;<ion-chip color="danger" outline>Live</ion-chip></ion-list-header>
           <ion-note>{{authService.getUserEmail()}}</ion-note>
-
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
+          <hr class="uk-divider-icon">
+          <div *ngFor="let p of appPages; let i = index">
+            <ion-menu-toggle auto-hide="false" *ngIf="p.accessLevel<=userAccessLevel && p.title!=''">
+              <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+                <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+                <ion-label>{{ p.title }}</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+          </div>
         </ion-list>
-
         <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
-          <ion-item>
-            <ion-searchbar 
-            showCancelButton="focus" 
-            cancelButtonText="Custom Cancel"
-            debounce="500"
-            animated
-            placeholder="Search Anything"
-            id="search"
-            (ionChange)="autocomplete()"
-            ></ion-searchbar>
-            <ion-list class="results" *ngIf="searchResultsFound">
-              <ion-item *ngFor="let result of searchResults" href="{{result.location}}">{{result.name}}</ion-item>
-            </ion-list>
-            <ion-list class="results" *ngIf="noSearchResultFound">
-              <ion-item>No search results found.</ion-item>
-            </ion-list>
+          <ion-item class="noPadding">
+            <div class="searchContainer">
+              <ion-searchbar 
+              showCancelButton="focus" 
+              cancelButtonText="Custom Cancel"
+              debounce="500"
+              animated
+              placeholder="Search"
+              id="search"
+              (ionChange)="autocomplete()"
+              ></ion-searchbar>
+              <ion-list class="results" *ngIf="searchResultsFound">
+                <ion-item *ngFor="let result of searchResults" href="{{result.location}}">{{result.name}}</ion-item>
+              </ion-list>
+              <ion-list class="results" *ngIf="noSearchResultFound">
+                <ion-item>No search results found.</ion-item>
+              </ion-list>
+            </div>
           </ion-item>
           <ion-item *ngFor="let label of labels" lines="none">
             <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
@@ -49,3 +52,8 @@
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
+<div id="overlay" *ngIf="dataProvider.showOverlay">
+  <ion-spinner name="crescent" color="tertiary"></ion-spinner>
+  <br>
+  <p style="text-align: center;width:100vw;">Loading Your Dashboard</p>
+</div>
