--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -123,3 +123,59 @@ ion-menu {
 ion-avatar {
   margin-left: 20px;
 }
+ion-searchbar{
+  padding: 0%;
+}
+.searchContainer{
+  background: var(--ion-background-color);
+  padding: 0%;
+  margin: 0%;
+  border-radius: 10px;
+  transition: all 500ms ease-in-out;
+}
+.searchContainer > ion-list, .searchContainer > ion-list >ion-item {
+  background:var(--ion-background-color);
+  --background:var(--ion-background-color);
+}
+.noPadding{
+  padding: 0%;
+  margin: 0%;
+  --padding-end:0% !important;
+  --padding-start:0% !important;
+}
+#overlay{
+  // display: none;
+  position: absolute;
+  top:0%;
+  left:0%;
+  width: 100vw;
+  height:100vh;
+  overflow: hidden;
+  z-index: 1;
+}
+#overlay > *{
+  position: relative;
+  top:50%;
+  left:50%;
+  width: 100px;
+  height:100px;
+  transform: translate(-50%,-50%);
+}
+@media (prefers-color-scheme:dark){
+  #overlay{
+      background-color: #07172cbd;
+  }
+  #overlay > *{
+    color:rgb(93, 144, 255);
+  }
+}
+@media (prefers-color-scheme:light){
+  #overlay{
+      background-color: #bd4f6c9a;
+  }
+  #overlay > *{
+    color:white;
+  }
+}
+
+
