--- a/src/app/holiday-calendar/holiday-calendar.component.scss
+++ b/src/app/holiday-calendar/holiday-calendar.component.scss
@@ -26,6 +26,7 @@
 }
 
 ion-col {
+    margin: 10px 10px;
     min-width: 70px;
     height: 70px;
     padding: 1em;
@@ -34,37 +35,20 @@ ion-col {
 }
 
 #prev, #next {
+    font-size: 40px;
     cursor: pointer;
-    color: #000;
+    color: var(--ion-color-dark);
 }
 
 #prev:hover, #next:hover, #prev:focus, #next:focus {
-    color: #555;
+    color: var(--ion-color-primary);
 }
 
 .day {
-    transition: box-shadow .5s ease-in-out;
+    transition: box-shadow 0.5s ease-in-out;
     cursor: pointer;
 }
 
 .day:hover {
-    box-shadow: 0px 0px 3px 2px #777;
+    box-shadow: 0px 0px 3px 2px var(--ion-color-light-shade);
 }
-
-// #overlay {
-//     height: 100vh;
-//     width: 100%;
-//     background-color: rgba(0,0,0,0.5);
-//     z-index: 1;
-//     position: absolute;
-//     top: 0;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-// }
-
-// #reminder-box {
-//     background-color: #fff;
-//     border-radius: 50px;
-//     padding: 2em;
-// }
