--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
                   <ion-label class="uk-width-expand sideDivider">
                     <span class="txt3 warning">Working Days</span>
                     <br>
-                    <span class="txt1 warning">24</span>
+                    <span class="txt1 warning">{{totalWorkingDays}} |</span><span class="warning"> and {{totalCompleteDays}} are complete</span>
                   </ion-label>
                 </ion-col>
                 <ion-col>
@@ -104,7 +104,7 @@
                   </div>
                 </ion-card>
               </ion-col>
-              <ion-col>
+              <ion-col *ngIf="dataProvider.accessLevel>=1">
                 <ion-item>
                   <ion-icon slot="end" name="help-circle-outline"></ion-icon><strong>Attendance Details</strong>
                 </ion-item>
@@ -125,7 +125,7 @@
             </ion-row>
           </ion-grid>
         </div>
-        <div>
+        <div *ngIf="dataProvider.accessLevel>=1">
           <ion-reorder slot="end">
             <ion-icon name="swap-vertical-outline"></ion-icon>
           </ion-reorder>
@@ -209,7 +209,7 @@
             </div>
           </ion-card>
         </div>
-        <div>
+        <div *ngIf="dataProvider.accessLevel>=1">
           <ion-reorder slot="end">
             <ion-icon name="swap-vertical-outline"></ion-icon>
           </ion-reorder>
