--- a/src/app/payroll/payroll.component.html
+++ b/src/app/payroll/payroll.component.html
@@ -8,13 +8,259 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Payroll</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong class="capitalize">Payroll</strong>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-card>
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <ion-card>
+                    <ion-row>
+                      <ion-col>
+                        <p class="txt1 success">250</p>
+                        <ion-label class="txt3">Need to paid</ion-label>
+                      </ion-col>
+                      <ion-col>
+                        <ion-chip color="success">
+                          <ion-icon name="at-circle-outline"></ion-icon>
+                          <ion-label color="success">New</ion-label>
+                        </ion-chip>
+                      </ion-col>
+                    </ion-row>
+                  </ion-card>
+                </ion-col>
+                <ion-col>
+                  <ion-card>
+                    <ion-row>
+                      <ion-col>
+                        <p class="txt1 tertiary">154</p>
+                        <ion-label class="txt3">Already paid</ion-label>
+                      </ion-col>
+                      <ion-col>
+                        <ion-chip color="tertiary">
+                          <ion-icon name="at-circle-outline"></ion-icon>
+                          <ion-label color="tertiary">Success</ion-label>
+                        </ion-chip>
+                      </ion-col>
+                    </ion-row>
+                  </ion-card>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  <ion-card>
+                    <ion-row>
+                      <ion-col>
+                        <p class="txt1 danger">120K $</p>
+                        <ion-label class="txt3">Total money paid </ion-label>
+                      </ion-col>
+                      <ion-col>
+                        <ion-chip color="danger">
+                          <ion-icon name="at-circle-outline"></ion-icon>
+                          <ion-label color="danger">Helpful</ion-label>
+                        </ion-chip>
+                      </ion-col>
+                    </ion-row>
+                  </ion-card>
+                </ion-col>
+                <ion-col>
+                  <ion-card>
+                    <ion-row>
+                      <ion-col>
+                        <p class="txt1 warning">15%</p>
+                        <ion-label class="txt3">Increment is salary.</ion-label>
+                      </ion-col>
+                      <ion-col>
+                        <ion-chip color="warning">
+                          <ion-icon name="at-circle-outline"></ion-icon>
+                          <ion-label color="warning">Important</ion-label>
+                        </ion-chip>
+                      </ion-col>
+                    </ion-row>
+                  </ion-card>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+            <canvas baseChart #payrollCanvas class="miniProgressChart" [legend]="false"
+              [datasets]="miniChartData" [labels]="miniChartLabels" [colors]="miniChartColors"
+              [chartType]="'line'" [options]="miniChartOptions">
+            </canvas>
+          </ion-card>
+        </ion-col>
+        <ion-col>
+          <ion-card>
+            <ion-item>
+              <ion-icon slot="end" name="help-circle-outline"></ion-icon><strong>Salary Requests</strong>
+            </ion-item>
+            <ion-card class="attendance">
+              <ion-list>
+                <ion-item *ngFor="let item of paymentRequests">
+                  <ion-avatar>
+                    <img src="{{item.avatar}}" />
+                  </ion-avatar>
+                  <ion-label class="uk-margin-left">{{item.employeeName}}</ion-label>
+                  <ion-label *ngIf="item.type=='Monthly Payment'">{{item.type}}</ion-label>
+                  <ion-label *ngIf="item.type=='Early Payment'">{{item.type}}</ion-label>
+                  &nbsp;&nbsp;&nbsp;
+                  <ion-chip color="success">
+                    <ion-icon name="time"></ion-icon>&nbsp;&nbsp;
+                    {{item.requestTime}}
+                  </ion-chip>
+                  <ion-badge slot="end" color="tertiary uk-padding-small" *ngIf="item.requestValid">Valid</ion-badge>
+                  <ion-badge slot="end" color="warning uk-padding-small" *ngIf="!item.requestValid">Invalid</ion-badge>
+                </ion-item>
+              </ion-list>
+            </ion-card>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-card class="uk-width-1-1">
+          <ion-label class="txt2">Quick actions for you</ion-label>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Pay everyone </ion-label>
+                  <ion-icon slot="end" size="large" color="tertiary" name="card"></ion-icon>
+                </ion-item>
+                <ion-button expand="block" color="tertiary" shape="round">
+                  Complete Action
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Create legal payment record.</ion-label>
+                  <ion-icon slot="end" size="large" color="warning" name="document-text"></ion-icon>
+                </ion-item>
+                <ion-button expand="block" color="warning" shape="round">
+                  Generate Report
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Remind everyone for financial meeting.</ion-label>
+                  <ion-icon slot="end" size="large" color="primary" name="chatbox-ellipses"></ion-icon>
+                </ion-item>
+                <ion-button expand="block" color="primary" shape="round">
+                  Message Everyone
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-item>
+                  <ion-label>Check increment score report.</ion-label>
+                  <ion-icon slot="end" size="large" color="danger" name="cellular"></ion-icon>
+                </ion-item>
+                <ion-button expand="block" color="danger" shape="round">
+                  Get Increment Score
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card>
+      </ion-row>
+      <ion-row>
+        <ion-card class="getPremiuim uk-width-1-1">
+          <ion-row>
+            <ion-col size="8">
+              <p class="txt1">Get premiuim support.</p>
+              <div class="uk-margin">
+                <ion-button fill="clear" shape="round">
+                  See Plans
+                </ion-button>
+              </div>
+            </ion-col>
+            <ion-col>
+              <p class="txt3 uk-margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur cursus tincidunt commodo. Nunc justo nisi, vestibulum facilisis porta vestibulum, ultrices volutpat arcu. Quisque nec dui mattis, fringilla magna in, vulputate enim. Fusce ut euismod ligula, id laoreet ex. </p>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-card>
+            <ion-row class="uk-flex-between">
+              <ion-col class="uk-width-expand">
+                <ion-label class="txt2">
+                  Interviews 
+                </ion-label>
+              </ion-col>
+              <ion-buttons style="width:min-content;">
+                <ion-button (click)="toggleInterviewData('today')" id="interviewToday">
+                  <ion-label>
+                    Today
+                  </ion-label>
+                </ion-button>
+                <ion-button (click)="toggleInterviewData('upcoming')" id="interviewUpcoming">
+                  <ion-label>
+                    Upcoming
+                  </ion-label>
+                </ion-button>
+                <ion-button (click)="toggleInterviewData('yesterday')" id="interviewYesterday">
+                  <ion-label>
+                    Yesterday
+                  </ion-label>
+                </ion-button>
+                <ion-button (click)="toggleInterviewData('all')" id="interviewYesterday">
+                  <ion-label>
+                    All
+                  </ion-label>
+                </ion-button>
+              </ion-buttons>
+            </ion-row>
+            <table class="uk-table" *ngIf="interviews.length>0">
+              <thead>
+                <tr>
+                  <th>Candidate</th>
+                  <th>Interview Status</th>
+                  <th>Interviewer</th>
+                  <th>Schedule</th>
+                  <th>Time / Day</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let interviewData of interviews">
+                  <td><ion-label>{{interviewData.candidate}}</ion-label></td>
+                  <td>
+                    <ion-label>
+                      <ion-badge *ngIf="interviewData.status=='Active'" color="primary">
+                        {{interviewData.status}}
+                      </ion-badge>
+                      <ion-badge *ngIf="interviewData.status=='Final'" color="success">
+                        {{interviewData.status}}
+                      </ion-badge>
+                      <ion-badge *ngIf="interviewData.status=='Beginner'" color="warning">
+                        {{interviewData.status}}
+                      </ion-badge>
+                    </ion-label>
+                  </td>
+                  <td>{{interviewData.candidate}}</td>
+                  <td>
+                    <ion-label>{{interviewData.schedule}}</ion-label>
+                  </td>
+                  <td>
+                    <ion-label>{{interviewData.dateTime}}</ion-label>
+                  </td>
+                  <td>
+                    <ion-button>
+                      <ion-label>Remind</ion-label>
+                    </ion-button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div *ngIf="interviews.length<=0">
+              <div class="uk-align-center">
+                <img src="/assets/broke.png" alt="Nothing Found" class="nothingFound uk-align-center">
+                <p *ngIf="!interviewFilter" class="txt3 uk-text-center">Nothing found please create a <a href="#interview"> new interview</a></p>
+                <p *ngIf="interviewFilter" class="txt3 uk-text-center">Nothing found in this filter please <a (click)="toggleInterviewData('all')"> clear filter </a> to see all.</p>
+              </div>
+            </div>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
