--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -7,14 +7,30 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Settings</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong class="capitalize">Settings</strong>
-  </div>
+<ion-content>
+  <ion-card>
+    <ion-avatar>
+      <img [src]="authService.getUserPhoto()" />
+    </ion-avatar>
+    <div class=" uk-align-center uk-width-1-2">
+      <ion-list class="uk-margin">
+        <ion-item>
+          <ion-icon name="person-circle"></ion-icon>
+          <ion-label>&nbsp;&nbsp;&nbsp;{{authService.getUserName()}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="mail"></ion-icon>
+          <ion-label>&nbsp;&nbsp;&nbsp;{{authService.getUserEmail()}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="people"></ion-icon>
+          <ion-label>&nbsp;&nbsp;&nbsp;Teams: 
+            <ion-chip color="success">@developer</ion-chip>
+            <ion-chip color="danger">@web master</ion-chip>
+          </ion-label>
+        </ion-item>
+        
+      </ion-list>
+    </div>
+  </ion-card>
 </ion-content>
