--- a/src/global.scss
+++ b/src/global.scss
@@ -97,6 +97,7 @@ h1,h2,h3,h4,h5,h6,p,ion-label{
 // .popover-content.sc-ion-popover-md > app-messages > ion-list{
 //     overflow-y: auto;
 // }
+
 @media (prefers-color-scheme:dark){
     .color-calendar.basic{
         background:var(--ion-color-light);
@@ -111,8 +112,20 @@ h1,h2,h3,h4,h5,h6,p,ion-label{
     .color-calendar.basic .calendar__arrow-inner::after{
         background-color:var(--ion-color-dark)
     }
+
 }
-
-
+// #backdrop{
+//     display:block;
+//     position: absolute;
+//     top:0px;
+//     left:0px;
+//     width:100vw;
+//     height:100vh;
+//     overflow: hidden;
+//     background-image: linear-gradient(120deg,rgba(7, 19, 29, 0.3),rgba(16, 51, 82,0.8));
+// }
+// #rootBody{
+//     filter: blur(10px);
+// }
 
 
