--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,36 +44,86 @@
               <ion-row>
                 <ion-col>
                   <ion-label class="uk-width-expand sideDivider">
-                    <span class="txt3 success">Payroll</span>
+                    <span class="txt3 success">Projects in progress</span>
                     <br>
-                    <span class="txt4 success"><span class="txt1">29</span> Calendar days</span>
+                    <span class="txt4 success"><span class="txt1">{{totalProjects}}</span></span>
                   </ion-label>
                 </ion-col>
                 <ion-col>
                   <ion-label class="uk-width-expand sideDivider">
-                    <span class="txt3 primary">Total Employees</span>
+                    <span class="txt3 primary">Leave taken</span>
                     <br>
-                    <span class="txt1 primary">130</span>
+                    <span class="txt1 primary">{{totalLeavesTaken}}</span>
                   </ion-label>
                 </ion-col>
                 <ion-col>
                   <ion-label class="uk-width-expand sideDivider">
-                    <span class="txt3 warning">Working Days</span>
+                    <span class="txt3 warning">Working days</span>
                     <br>
                     <span class="txt1 warning">{{totalWorkingDays}} |</span><span class="warning"> and {{totalCompleteDays}} are complete</span>
                   </ion-label>
                 </ion-col>
                 <ion-col>
                   <ion-label class="uk-width-expand">
-                    <span class="txt3 danger">Payroll Processed</span>
+                    <span class="txt3 danger">Project Completed</span>
                     <br>
-                    <span class="txt1 danger">121</span>
-                    <span class="txt3 danger">/130</span>
+                    <span class="txt1 danger">{{totalCompletedProjects}}</span>
                   </ion-label>
                 </ion-col>
               </ion-row>
             </ion-grid>
           </ion-card>
+        </div>
+        <div>
+          <ion-reorder slot="end">
+            <ion-icon name="swap-vertical-outline"></ion-icon>
+          </ion-reorder>
+          <ion-row>
+            <ion-card class="uk-width-1-1">
+              <ion-label class="txt2">Quick actions for you</ion-label>
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <ion-item>
+                      <ion-label>Request A Leave </ion-label>
+                      <ion-icon slot="end" size="large" color="tertiary" name="card"></ion-icon>
+                    </ion-item>
+                    <ion-button [disabled]="!leaveFormAllowed" expand="block" color="tertiary" shape="round" (click)="openNotification()">
+                      Complete Action
+                    </ion-button>
+                    <ion-label color="danger" *ngIf="!leaveFormAllowed">You can't take a leave because you used all of them</ion-label>
+                  </ion-col>
+                  <ion-col>
+                    <ion-item>
+                      <ion-label>Submit a new project idea.</ion-label>
+                      <ion-icon slot="end" size="large" color="warning" name="document-text"></ion-icon>
+                    </ion-item>
+                    <ion-button expand="block" color="warning" shape="round">
+                      Generate Report
+                    </ion-button>
+                  </ion-col>
+                  <ion-col>
+                    <ion-item>
+                      <ion-label>Contact current project team.</ion-label>
+                      <ion-icon slot="end" size="large" color="primary" name="chatbox-ellipses"></ion-icon>
+                    </ion-item>
+                    <ion-button expand="block" color="primary" shape="round">
+                      Message Everyone
+                    </ion-button>
+                  </ion-col>
+                  <ion-col>
+                    <ion-item>
+                      <ion-label>Check code </ion-label>
+                      <ion-icon slot="end" size="large" color="danger" name="cellular"></ion-icon>
+                    </ion-item>
+                    <ion-button expand="block" color="danger" shape="round">
+                      Get Increment Score
+                    </ion-button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-card>
+          </ion-row>
         </div>
         <div>
           <ion-reorder slot="end">
@@ -252,3 +302,71 @@
     </ion-list>
   </div>
 </ion-content>
+<ion-card id="hiddenInfoCard">
+  <ion-button (click)="closeNotification()" expand="full" fill="clear">
+    <ion-icon name="close"></ion-icon>
+    &nbsp;&nbsp;Close Panel
+  </ion-button>
+  <ion-label color="success" class="txt2 uk-align-center" style="width:max-content;">You have {{totalLeaveLeft}} leaves left for this annum</ion-label>
+  <ion-card>
+    <form [formGroup]="form" action="">
+        <ion-input 
+          type="text" 
+          autofocus 
+          placeholder="Reason" 
+          inputmode="text"
+          required
+          formControlName="reason"
+          max="20"
+          clearInput="true"
+          #reason
+        ></ion-input>
+        <ion-textarea 
+          type="text" 
+          placeholder="Description" 
+          inputmode="text" 
+          required 
+          clearInput="true" 
+          #description 
+          formControlName="description" 
+        ></ion-textarea>
+        <ion-input 
+          type="number" 
+          placeholder="Total Leave Days" 
+          inputmode="text"
+          required
+          clearInput="true" 
+          [min]="1"
+          [max]="totalLeaveLeft"
+          #totalDays
+          formControlName="totalDays"
+        ></ion-input>
+        <ion-item>
+          <ion-label>Start Date</ion-label>
+          <ion-datetime 
+          value="1990-02-19" 
+          placeholder="Select Date" 
+          #startingDate 
+          required
+          [min]="minDateInISO"
+          (ionChange)="changedDate(startingDate.value)"
+          formControlName="startingDate"></ion-datetime>
+        </ion-item>
+        <ion-item>
+          <ion-label>Start Date</ion-label>
+          <ion-datetime 
+          placeholder="Select Date" 
+          #endingDate 
+          required 
+          [disabled]="startingDate.value==''" 
+          [min]="minEndDateInISO" 
+          [max]="maxDateInISO" 
+          formControlName="endingDate"></ion-datetime>
+        </ion-item>
+        <ion-button class="uk-align-center" (click)="addLeaveRequest()" type="submit" [disabled]="isLoading || !form.valid"
+      [ngClass]="isLoading || !form.valid ? 'disabled' : ''" shape="round" color="success">
+        <ion-icon name="log-in-outline" size="large"></ion-icon>&nbsp;Sign Up
+        </ion-button>
+    </form>
+  </ion-card>
+</ion-card>
